# SlicerStereotactic

./: CMakeLists.txt  README.md  ZFrame.scad  ZFrame.stl  calculateTrajectory.py
StereoSlicer/: CMakeLists.txt
StereoSlicer/Zframe_raster/: CMakeLists.txt  Zframe_raster.py
find_zFrame/: find_zFrame.py  segmentZframe.py
find_zFrame/Ressources/: segmentZframe.py
find_zFrame/Ressources/Leksell_Frame/: leksell2LPS.h5
probeView/: probeView.py
resources/Images/: Logo.xcf
stereo_points/: stereo_points.py
